# libstdfunc

./: README.md  meson.build
.github/workflows/: test.yml
src/: map.h  option.h  pair.h  result.h
tests/: test_asserts.h  test_map.c  test_option.c  test_pair.c  test_result.c
